# DSHBA

./: .gitignore  CMakeLists.txt  README.md  UIthread.c  UIthread.h  custom_threading.c  debugging.h  dshba.ini  imgui.ini  init.cpp  init.h  input.map  main.cpp
cmake/: FindSDL2.cmake
files/: condlut.cpp
files/ags_stuff/: DMA_HBlank.c  TimerIRQ.c  mem_pal.c
files/bios/: header.py
files/logdiff/: logdiff.py
files/mode3/: mode3.py
files/tonc/: obj_demo.dshba  tonc-bin.txt
include/: byteswap.h  const.h  custom_threading.h  default.h  flags.h  helpers.h  log.h  sleeping.h
modules/glad/: glad.c  glad.h
modules/imgui/: imgui.cpp  imgui.h
src/Core/: CMakeLists.txt  CoreUtils.cpp  system.cpp  system.h
src/Core/APU/: APU.cpp  APU.h  CMakeLists.txt
src/Core/APU/Channels/: Channel.h  EnvelopeChannel.h  FIFO.h  Noise.h  Square.h  Wave.h
src/Core/ARM7TDMI/: ARM7TDMI.cpp  ARM7TDMI.h  CMakeLists.txt  Pipeline.h  Tables.cpp
src/Core/ARM7TDMI/instructions/: SWI.inl
src/Core/ARM7TDMI/instructions/ARM/: BlockDataTransfer.inl  Branch.inl  DataProcessing.inl  LoadStore.inl  Multiply.inl  PSRTransfer.inl
src/Core/ARM7TDMI/instructions/THUMB/: ALU.inl  Branch.inl  LoadStore.inl
src/Core/Breakpoints/: breakpoints.c  breakpoints.h
src/Core/IO/: CMakeLists.txt  DMA.inl  IOAudio.inl  IODMA.inl  IOFlags.h  IOReadWrite.inl  IOTimers.inl  Interrupts.h  MMIO.cpp  MMIO.h  ReadWrite.inl  Registers.h  Timers.inl
src/Core/Mem/: BIOS.h  CMakeLists.txt  DMA.inl  Mem.cpp  Mem.h  MemDMA.inl  MemDMAUtil.inl  MemPageTables.inl  MemReadWrite.inl  MemoryHelpers.h  NormmattBIOS.h  ReadWrite.inl
src/Core/Mem/Backup/: BackupDB.h  BackupDefault.h  BackupMem.h  EEPROM.cpp  EEPROM.h  Flash.cpp  Flash.h  SRAM.cpp  SRAM.h
src/Core/Memory/: CMakeLists.txt  Memory.cpp  Memory.h  MemoryHelpers.h  memory.cpp
src/Core/PPU/: CMakeLists.txt  GXHelpers.h  PPU.cpp  PPU.h
src/Core/PPU/shaders/: GX_constants.h  shaders.h  shaders.py
src/Core/PPU/shaders/raw/: blit_fragment.glsl  blit_vertex.glsl  fragment.glsl  fragment_helpers.glsl  fragment_mode0.glsl  fragment_mode1.glsl  fragment_mode2.glsl  fragment_mode3.glsl  fragment_mode4.glsl  object_fragment.glsl  object_vertex.glsl  vertex.glsl  window_fragment.glsl  window_vertex.glsl
src/Core/Scheduler/: scheduler.c  scheduler.cpp  scheduler.h  scheduler_impl.h
src/Core/include/: CoreUtils.h
src/Frontend/: CMakeLists.txt  controller.cpp  controller.h  debugger.cpp  debugger.h  frontend.cpp  frontend.h  interface.h  settings.cpp  settings.h
src/Frontend/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  implot.h  implot_internal.h
src/Frontend/widgets/: cache_block_stats.h  console.h  disassemble.c  disassemble.h  disassembly_viewer.h  file_dialog.h  memory_viewer.h  menubar.cpp  menubar.h  overlay.h  register_viewer.h
